--- a/index.css
+++ b/index.css
@@ -4,14 +4,19 @@ body {
 }
 
 .container {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   justify-content: space-around;
-  align-items: center;
+  padding: 4rem;
   text-align: center;
-  width: 575px;
-  height: 385px;
+  max-width: 575px;
   background-color: #1b244a;
   margin: 2rem auto;
+  .scoreContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   h3 {
     font-size: 40px;
     color: #eeeeee;
@@ -36,17 +41,26 @@ body {
   .btnContainer {
     display: flex;
     justify-content: space-between;
-    button {
-      background-color: transparent;
-      border: 2px solid #9aabd8;
-      color: #9aabd8;
-      font-family: CursedTimer;
-      font-size: 1.125rem;
-      width: 45px;
-      height: 45px;
-      border-radius: 5px;
-    }
   }
+  button {
+    background-color: transparent;
+    border: 2px solid #9aabd8;
+    color: #9aabd8;
+    font-family: CursedTimer;
+    font-size: 1.125rem;
+    width: 45px;
+    height: 45px;
+    border-radius: 5px;
+  }
+  button.resetBtn {
+    width: unset;
+    grid-column: span 2;
+    margin: 2rem 0;
+  }
+}
+.flex {
+  display: flex;
+  justify-content: space-between;
 }
 
 @font-face {
