--- a/index.css
+++ b/index.css
@@ -1,10 +1,12 @@
 body {
   margin: 0;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: #eeeeee;
 }
 
 .container {
   display: grid;
+  column-gap: 1rem;
   grid-template-columns: repeat(2, 1fr);
   justify-content: space-around;
   padding: 4rem;
@@ -16,16 +18,19 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: auto;
+    max-width: 155px;
+    width: 100%;
+    min-height: 120px;
   }
   h3 {
     font-size: 40px;
-    color: #eeeeee;
     margin-block-start: 0;
     margin-block-end: 0;
   }
   .scoreBoard {
     background-color: #080001;
-    width: 155px;
+    width: 100%;
     height: 120px;
     margin: 24px 0;
     border-radius: 5px;
@@ -41,6 +46,7 @@ body {
   .btnContainer {
     display: flex;
     justify-content: space-between;
+    gap: 0.75rem;
   }
   button {
     background-color: transparent;
@@ -52,15 +58,38 @@ body {
     height: 45px;
     border-radius: 5px;
   }
-  button.resetBtn {
+  button.resetBtn,
+  .latest {
     width: unset;
     grid-column: span 2;
     margin: 2rem 0;
+    color: #9aabd8;
+  }
+  .resultContainer {
+    border: 2px solid #9aabd8;
+    border-radius: 5px;
+    font-weight: 900;
+    color: #9aabd8;
+    .result {
+      font-size: large;
+    }
   }
 }
-.flex {
-  display: flex;
-  justify-content: space-between;
+.winner {
+  animation: winnerAnimation 0.5s ease-in-out forwards;
+}
+
+@keyframes winnerAnimation {
+  50% {
+    transform: scale(1.2);
+    background-color: white;
+    color: #1b244a;
+  }
+  100% {
+    transform: scale(1.1);
+    border-color: white;
+    color: #eeeeee;
+  }
 }
 
 @font-face {
